fix button align in rtl

--- a/common/loginpage/src/css/styles.less
+++ b/common/loginpage/src/css/styles.less
@@ -587,6 +587,9 @@ li.menu-item {
             /*border-radius: 4px;*/
             /*background: @background-accent-button;*/
         /*} */
+        .rtl & {
+          text-align: right;
+        }
     }
 
     #area-dnd-file {
